lib/src/compiler/tests/testdata/errors/91.out
error[E124]: unknown pattern `$a`
 --> line:3:6
  |
3 |      $a
  |      ^^ this pattern is not declared in the `strings` section
  |